[gd_scene load_steps=3 format=2]

[ext_resource path="res://LevelSelect/LevelSelect1.gd" type="Script" id=1]

[sub_resource type="ImageTexture" id=1]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1936.0
margin_bottom = 1088.0
color = Color( 0, 0, 0, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Node" type="Node" parent="."]

[node name="GraveYardButton" type="Button" parent="Node"]
margin_left = 500.0
margin_top = 168.0
margin_right = 1400.0
margin_bottom = 368.0
text = "Graveyard"
icon = SubResource( 1 )

[node name="WithTimeButton" type="Button" parent="Node"]
margin_left = 500.0
margin_top = 450.0
margin_right = 1400.0
margin_bottom = 650.0
text = "With Time"

[node name="BackButton" type="Button" parent="Node"]
margin_left = 500.0
margin_top = 758.0
margin_right = 1400.0
margin_bottom = 958.0
text = "Back"

[connection signal="pressed" from="Node/GraveYardButton" to="." method="_on_GraveYardButton_pressed"]
[connection signal="pressed" from="Node/WithTimeButton" to="." method="_on_WithTimeButton_pressed"]
[connection signal="pressed" from="Node/BackButton" to="." method="_on_BackButton_pressed"]
